tests/ui/endpoint/too_many_args.stderr
error: Extra arguments for this endpoint handler
 --> tests/ui/endpoint/too_many_args.rs:9:4
  |
9 | fn read_all(_id: u64) {}
  |    ^^^^^^^^

error[E0412]: cannot find type `read_all___gotham_restful_endpoint` in this scope
 --> tests/ui/endpoint/too_many_args.rs:5:12
  |
4 | #[derive(Resource)]
  |                  - help: you might be missing a type parameter: `<read_all___gotham_restful_endpoint>`
5 | #[resource(read_all)]
  |            ^^^^^^^^ not found in this scope
